# chanscope-knowledge-agents

./: .cursorignore  .dockerignore  .env.template  .gitattributes  .gitignore  .replit  Dockerfile  README.md  Test cmds  app.py  chainlit.md  docker-compose.yml  pyproject.toml  pytest.ini  replit.md  replit.nix  requirements.txt
.cursor/rules/: ai-agent-engineer.mdc  approach-chanscope.mdc  chanscope-api-expectations.mdc  chanscope-deployment.mdc  chanscope-rules.mdc  chanscope-testing.mdc  chanscope-workflow-clarification.mdc  docker-compose-schema.mdc  fast-api.mdc  stack-chanscope.mdc
.github/workflows/: ci.yml
api/: README_REQUESTS.md  __init__.py  app.py  cache.py  errors.py  exceptions.py  models.py  refresh_dashboard.py  routes.py
api/middleware/: __init__.py  request_id.py
api/routers/: __init__.py  admin.py  data.py  embeddings.py  health.py  query.py  shared.py
attached_assets/: Pasted--File-frozen-importlib-bootstrap-line-1204-in-gcd-import-File-frozen-importlib-bootst-1750418163921_1750418163922.txt  Pasted-2025-10-13-10-19-41-71-ce840e6d-System-forwarding-local-port-5000-to-external-port-80-mapped-as--1760367455191_1760367455191.txt
chainlit_frontend/: __init__.py  app.py  chainlit.yaml
chainlit_frontend/.chainlit/: config.toml
chainlit_frontend/styles/: custom.css
config/: base.py  base_settings.py  chanscope_config.py  config_utils.py  dialog.yaml  env_loader.py  logging.conf  logging_config.py  logging_utils.py  replit.py  settings.py  storage.py  stored_queries.yaml
deployment/: DEPLOYMENT.md  DEPLOYMENT_FIXES.md  Dockerfile  Dockerfile.test  README.md  README_DEPLOYMENT.md  deploy_frontend.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  setup.sh
docs/: chanscope_implementation.md  example_queries.md  llm_chunking_optimization.md  llm_sql_feature.md  stratification_guide.md
examples/: llm_nl_query_example.py
knowledge_agents/: __init__.py  config.py  data_ops.py  embedding_ops.py  errors.py  inference_ops.py  llm_sql_generator.py  llm_sql_generator.yaml  model_ops.py  prompt.yaml  run.py  stratified_ops.py  utils.py
knowledge_agents/data_processing/: __init__.py  chanscope_manager.py  cloud_handler.py  contraction_mapping.json  dialog_processor.py  processing.py  sampler.py  scheduler.py
scripts/: README_TESTING.md  __init__.py  automated_refresh.py  cache_buster.sh  check_replit_db.py  deployment_startup.sh  docker_scheduler.sh  docker_tests.sh  generate_test_data.py  interactive_nl_query.py  local_tests.sh  manage_scheduler.sh  nl_query.py  process_data.py  refresh_control.py  replit_init.sh  replit_setup.sh  replit_startup.sh  replit_tests.sh  run_chanscope_tests.sh  run_docker_tests.sh  run_lock_test.sh  run_tests.sh  scheduled_update.py  test_and_deploy.sh  test_chanscope_implementation.sh  test_optimizations.py  test_process_lock.py  test_venice_character.py  validate_chanscope_approach.py  wipe_all_data.py
scripts/replit/: api.sh  run_tests.sh  scheduled_update.sh  start.sh  ui.sh
scripts/utils/: processing_lock.py  runtime_fixes.py
tests/: .dockerignore  README_TESTING.md  conftest.py  debug_client.py  knowledge_agent_api_tests.md  llm_sql_test.py  test_cache_health.py  test_chanscope_approach.py  test_chanscope_manager.py  test_chunking_optimization.py  test_data_ingestion.py  test_embedding_pipeline.py  test_endpoints.py  test_model_param_support.py  test_object_storage.py  test_openrouter_client.py  test_queries.json  test_storage_interfaces.py
utils/: processing_lock.py
