[tool.poetry]
name = "knowledge_agents"
version = "0.1.0"
description = "An advanced NLP system that leverages cloud storage and multiple LLM providers"
authors = ["Joel Konitzer"]
packages = [{include = "knowledge_agents"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
flask = {version = "2.3.3", extras = ["async"]}
boto3 = "1.35.81"
pandas = "2.1.0"
gunicorn = "^21.2.0"
python-dotenv = "1.0.0"
werkzeug = "2.3.7"
numpy = "^1.24.3"
scikit-learn = "^1.3.0"
torch = {version = "^2.0.1", source = "pytorch-cpu"}
transformers = {version = "^4.31.0", extras = ["torch"]}
openai = "^1.3.7"
tiktoken = "^0.4.0"
requests = "^2.31.0"
tqdm = "^4.65.0"
tenacity = "^8.2.2"
nest-asyncio = "^1.5.8"
ipython = "^8.12.0"
bs4 = "^0.0.2"
asgiref = "^3.7.2"
chainlit = "0.7.604"
pydantic = "1.10.13"
aiohttp = "^3.9.1"
flask-cors = "^5.0.0"
quart = "<0.20.0"
quart-cors = "^0.8.0"
aioboto3 = "13.3.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 