[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chanscope-retrieval"
version = "0.1.0"
description = "An advanced NLP system that leverages cloud storage and multiple LLM providers"
authors = [
    { name = "Joel Konitzer" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "boto3==1.35.81",
    "pandas==2.1.0",
    "python-dotenv==1.0.0",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.0",
    "transformers>=4.31.0",
    "tiktoken>=0.4.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "tenacity>=8.2.2",
    "beautifulsoup4>=4.13.3",
    "asgiref>=3.7.2",
    "pydantic==1.10.13",
    "aiohttp>=3.9.1",
    "aioboto3==13.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.25.0",
    "python-multipart>=0.0.6",
    "httpx>=0.28.1",
    "pyarrow>=14.0.1",
    "pytz>=2024.1",
    "filelock>=3.13.1",
    "openai>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "replit>=3.3.2",
    "replit-object-storage==1.0.2",
    "sqlparse>=0.5.3"
]

[project.optional-dependencies]
dev = [
    "ipython>=8.12.0",
    "werkzeug==2.3.7",
    "nest-asyncio>=1.5.8",
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "pytest-asyncio>=0.21.1"
]

[project.scripts]
check-db = "scripts.check_replit_db:main"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true